docs(demo): add TeXtured bibliography entry
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/bibliography.bib
+++ b/preamble/bibliography.bib
@@ -27,3 +27,9 @@
     url           = {https://gitlab.mff.cuni.cz/teaching/thesis-templates/thesis-en},
     addendum      = {\mkbibacro{URL}\addcolon\space\url{https://www.mff.cuni.cz/en/students/student-theses-templates}},
 }
+@online{TeXtured,
+    author        = {Dujava, Jon\'{a}\v{s}},
+    title         = {{\TeXtured{} --- \LaTeX{} Template}},
+    year          = {2024},
+    github        = {jdujava/TeXtured},
+}
