feat(overleaf): add Overleaf template links
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/bibliography.bib
+++ b/preamble/bibliography.bib
@@ -25,11 +25,12 @@
     title         = {{A Template for Typesetting Thesis at MFF UK in LaTeX}},
     year          = {2024},
     url           = {https://gitlab.mff.cuni.cz/teaching/thesis-templates/thesis-en},
-    addendum      = {\mkbibacro{URL}\addcolon\space\url{https://www.mff.cuni.cz/en/students/student-theses-templates}},
+    addendum      = {\mkbibacro{URL}\addcolon\space\url{https://mff.cuni.cz/en/students/student-theses-templates}},
 }
 @online{TeXtured,
     author        = {Dujava, Jon\'{a}\v{s}},
     title         = {{\TeXtured{} --- \LaTeX{} Template}},
     year          = {2024},
+    url           = {https://overleaf.com/latex/templates/textured/zwtzzwgddbsh},
     github        = {jdujava/TeXtured},
 }
