feat(metadata): customize pdfcreator field
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/general/hyperref.tex
+++ b/preamble/general/hyperref.tex
@@ -20,6 +20,8 @@
     pdftitle=\ThesisTitlePlaintext,
     pdfsubject=\Subject,
     pdfkeywords=\KeywordsPlaintext,
+    pdfcreator={LaTeX with hyperref, and biblatex/biber},
+    pdfdisplaydoctitle, % https://tex.stackexchange.com/a/435434/120853
 }
 
 %% NOTE: look of references, hyperlinks, and citations is customized
