fix(twopage): avoid error for two-sided printing
Also always properly start main matter chapters on right pages for
two-sided printing.

Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/layout/geometry.tex
+++ b/preamble/layout/geometry.tex
@@ -4,7 +4,7 @@
 \usepackage{geometry} % flexible interface for adjusting page layout/dimensions
 \makeatletter
 \if@twoside%
-    \def\Gm@bindingoffset{15mm} % binding offset for two-sided printing
+    \setlength\Gm@bindingoffset{15mm} % binding offset for two-sided printing
 \fi%
 \makeatother
 \geometry{
