--- a/preamble/layout/numbering.tex
+++ b/preamble/layout/numbering.tex
@@ -1,14 +1,15 @@
 %% Page numbering style and counters for different parts of the document
 \makeatletter
-\NewDocumentCommand{\frontmatter}{}{     % the frontmatter with
-    \pagenumbering{roman}                % roman page numbering
-    \gdef\thechapter{\@Alph\c@chapter}   % uppercase roman chapter numbering
+\NewDocumentCommand{\frontmatter}{}{     % the front matter
+    \pagenumbering{roman}                %   roman page numbering
+    \gdef\thechapter{\@Alph\c@chapter}   %   uppercase roman chapter numbering
 }
-\NewDocumentCommand{\mainmatter}{}{      % the mainmatter with
-    \pagenumbering{arabic}               % arabic page numbering
-    \setcounter{chapter}{0}              % reset chapter counter
-    \setcounter{section}{0}              % reset section counter
-    \gdef\thechapter{\@arabic\c@chapter} % arabic chapter numbering
+\NewDocumentCommand{\mainmatter}{}{      % the main matter
+    \cleardoublepage                     %   start on the right page
+    \pagenumbering{arabic}               %   arabic page numbering
+    \setcounter{chapter}{0}              %   reset chapter counter
+    \setcounter{section}{0}              %   reset section counter
+    \gdef\thechapter{\@arabic\c@chapter} %   arabic chapter numbering
 }
-\NewDocumentCommand{\backmatter}{}{}     % the backmatter (continue with arabic page numbering)
+\NewDocumentCommand{\backmatter}{}{}     % the back matter (continue with arabic page numbering)
 \makeatother
