feat(declaration): prettier Declaration of Authorship
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -1,19 +1,23 @@
 %%% A page with a solemn declaration
 
 \cleardoublepage
-\markboth{Declaration}{Declaration}
+\markboth{Declaration of Authorship}{Declaration of Authorship}
 \vspace*{\fill}
 
-\noindent
+\subsection*{Declaration of Authorship}
+
 I declare that I carried out this \ThesisType{} thesis on my own, and only with the cited sources, literature and other professional sources.
 I understand that my work relates to the rights and obligations under the Act No.~121/2000 Sb., the~Copyright Act, as amended, in particular the fact that the Charles University has the right to conclude a license agreement on the use of this work as a school work pursuant to Section 60 subsection 1 of the Copyright Act.
 
-\vspace{2em}
+\vspace{7ex}
 
-\begin{tabular}{@{}p{0.5\linewidth - 1.5em}@{\hspace{1.5em}}p{0.5\linewidth - 1.0em}@{}}
-    In {\dotfill} date {\dotfill} & {\dotfill}                     \\[0.5em]
-                                  & \hfil Author's signature \hfil \\
-\end{tabular}
+\begin{center}
+    \renewcommand{\arraystretch}{1.3}
+    \begin{tabular}{W{c}{0.32\linewidth} p{2em} W{c}{0.42\linewidth}}
+        \arrayrulecolor{Gray70} \cmidrule{1-1} \cmidrule{3-3} % gray placeholder lines
+        \emph{Place \& Date} && \emph{\ThesisAuthor} \\
+    \end{tabular}
+\end{center}
 
 \vspace{5em}
 \newpage
