--- a/preamble/general/colors.tex
+++ b/preamble/general/colors.tex
@@ -1,5 +1,5 @@
 %% Colors
-\usepackage[rgb]{xcolor} % color facilities
+\usepackage[rgb,table]{xcolor} % color facilities
 
 %% TODO: slightly darker gray color for "optional" words
 \definecolor{ChapterNumberColor}{gray}{0.88}
