feat(censor): load censor package
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/debug/commands.tex
+++ b/preamble/debug/commands.tex
@@ -13,3 +13,11 @@
         \usepackage{lua-visual-debug}
     \fi
 \fi
+
+%% Censoring
+\usepackage{censor}
+\ifCENSOR % censor package censors by default
+    % do nothing if censoring requested
+\else
+    \StopCensoring % disable censoring
+\fi
