--- a/thesis.tex
+++ b/thesis.tex
@@ -12,8 +12,10 @@
 % \documentclass[12pt,a4paper,openright,twoside]{report}  % two-sided (for printing)
 
 \newif\ifWIP
-%% NOTE: Comment out the following line for the final version
+\newif\ifCENSOR
+%% NOTE: Comment out the following lines for the final version
 \WIPtrue % THIS IS A WORK-IN-PROGRESS VERSION
+\CENSORtrue % THIS IS A CENSORED VERSION
 
 %% Preamble - data, packages, macros, and more
 \input{preamble/main}
