--- a/preamble/general/typesetting.tex
+++ b/preamble/general/typesetting.tex
@@ -35,6 +35,8 @@
 \usepackage{ninecolors}     % now we can load `ninecolors` package
 \selectcolormodel{rgb}      % switch back to RGB color model
 \usepackage{tabularray}     % advanced LaTeX tables
+\usepackage{codehigh}       % verbatim in tables (with `\fakeverb` macro)
+\UseTblrLibrary{amsmath, booktabs}
 
 %% Same numbering for equations, figures, and tables
 \makeatletter
