feat(math): add math-ending punctuation macros
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/math/macros.tex
+++ b/preamble/math/macros.tex
@@ -1,5 +1,9 @@
 %%% Macros for math symbols
 
+%% Punctuation in math mode
+\NewDocumentCommand{\eqend}{}{\,.}
+\NewDocumentCommand{\eqcomma}{}{\,,}
+
 %% Misc math macros
 \NewCommandCopy{\sq}{\sqrt}
 \DeclareMathOperator{\sgn}{sgn}
