feat(hologo): easier access to *TeX logos
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/user/macros.tex
+++ b/preamble/user/macros.tex
@@ -1,2 +1,6 @@
 %% User macros
+
+%% TeXtured logo
 \NewExpandableDocumentCommand{\TeXtured}{}{\texorpdfstring{\textsf{\TeX{}tured}}{TeXtured}}
+
+\usepackage{hologo} % Provides *TeX logos (for example `\hologo{pdfLaTeX}`)
