feat(math): automatically use `\boldmath` of `\bfseries` text
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/environments/remark-like.tex
+++ b/preamble/environments/remark-like.tex
@@ -23,7 +23,7 @@
 \NewDocumentCommand{\NewRemarkLikes}{>{\SplitList{,}}m}{\ProcessList{#1}{\NewRemarkLike}}
 
 %% Define remark-like environments
-\NewRemarkLikes{remark, example, derivation, calculation}
+\NewRemarkLikes{remark, example, derivation, calculation, tip}
 
 
 %%% Proof environment
