chore(debug): disable lua-visual-debug by default
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/debug/commands.tex
+++ b/preamble/debug/commands.tex
@@ -10,7 +10,7 @@
 \ifWIP
     \overfullrule=1mm
     \ifluatex % only for luaLaTeX
-        \usepackage{lua-visual-debug}
+        % \usepackage{lua-visual-debug} % helper for space tweaking
     \fi
 \fi
 
