feat(float): advanced caption positioning
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/bibliography.bib
+++ b/preamble/bibliography.bib
@@ -33,3 +33,9 @@
     url           = {https://overleaf.com/latex/templates/textured/zwtzzwgddbsh},
     github        = {jdujava/TeXtured},
 }
+@online{ITTtemplate,
+    author        = {Wild, Vasco Alexander and Povel, Alex},
+    title         = {{Template of the Institute of Engineering Thermodynamics (M-21)}},
+    year          = {2024},
+    url           = {https://collaborating.tuhh.de/m21/public/theses/itt-latex-template},
+}
