--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -12,6 +12,7 @@
 
 %% Typesetting, figures, tables, etc.
 \input{preamble/general/typesetting}
+\input{preamble/general/floats}
 
 %% Hyperlinks, PDF metadata
 \input{preamble/general/hyperref}
