feat(math): more convenient math macros
Just `\I` for imaginary unit and `\E` for Euler's number.

Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/math/macros.tex
+++ b/preamble/math/macros.tex
@@ -17,9 +17,8 @@
 
 %% Imaginary unit and Euler's number
 %% inspired by Niklas Beisert
-\NewDocumentCommand{\iunit}{}{\mathring{\imath}}
-\NewDocumentCommand{\eunit}{}{\mathinner{\mathrm{e}}}
-\NewDocumentCommand{\eunits}{}{\mathrm{e}}
+\NewDocumentCommand{\I}{}{\mathring{\imath}}
+\NewDocumentCommand{\E}{s}{\IfBooleanTF{#1}{\mathrm{e}}{\mathinner{\mathrm{e}}}}
 
 %%% Various fields and number sets
 \NewDocumentCommand{\R}{}{\mathbb{R}}
