fix(math): automatically turn off `\boldmath`
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/environments/init.tex
+++ b/preamble/environments/init.tex
@@ -20,7 +20,7 @@
 
 %%% Definitions of theorem/remark-like environments
 \declaretheoremstyle[
-    headfont=\bfseries\sffamily, bodyfont=\normalfont,
+    headfont=\bfseries\sffamily, notefont=\mdseries\sffamily, bodyfont=\normalfont,
     postheadhook=\strut,  % always same height (of the first line)
     % prefoothook=\strut, % [this messes up the spacing when the last line is an equation]
     %% ----------------- %%   -> better to handle with the qed symbol using `qedhere`
