chore(math): reduce pointless use of \ensuremath
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/math/macros.tex
+++ b/preamble/math/macros.tex
@@ -56,8 +56,8 @@
 \DeclareMathOperator{\su}{\mathfrak{su}}
 \DeclareMathOperator{\SU}{\mathsf{SU}}
 \DeclareMathOperator{\Sp}{\mathsf{Sp}}
-\NewDocumentCommand{\g}{}{\ensuremath{\mathfrak{g}}}
-\NewDocumentCommand{\rankgroup}{}{\ensuremath{\mathsf{r}}}
+\NewDocumentCommand{\g}{}{\mathfrak{g}}
+\NewDocumentCommand{\rankgroup}{}{\mathsf{r}}
 
 %% Differential Geometry
 \DeclareMathOperator{\Sect}{Sect}
