--- a/preamble/user/math.tex
+++ b/preamble/user/math.tex
@@ -3,4 +3,4 @@
 \NewDocumentCommand{\Hyperboloid}{}{\ensuremath{\mathbb{H}}}
 \NewDocumentCommand{\CP}{}{\ensuremath{\mathbb{CP}}}
 \NewDocumentCommand{\AdS}{}{\ensuremath{\mathsf{AdS}}}
-\NewDocumentCommand{\spacedim}{}{\ensuremath{\mathsfit{d}}}
+\NewDocumentCommand{\spacedim}{}{\mathsfit{d}}
