--- a/thesis.tex
+++ b/thesis.tex
@@ -17,6 +17,9 @@
 \WIPtrue % THIS IS A WORK-IN-PROGRESS VERSION
 \CENSORtrue % THIS IS A CENSORED VERSION
 
+\newif\ifFANCY
+\FANCYtrue % enable some of the more fancy stylistic choices
+
 %% Preamble - data, packages, macros, and more
 \input{preamble/main}
 
