--- a/preamble/layout/titles.tex
+++ b/preamble/layout/titles.tex
@@ -8,34 +8,45 @@
 %%% Chapter and section formatting
 \usepackage{titlesec}
 
-\titleformat{\section}{\normalfont\Large\bfseries}{\thesection}{1em}{}
+\titleformat{\section}{\normalfont\Large\bfseries}{\thesection}{0.8em}{}
 %% NOTE: also include `\phantomsection` so even non-numbered subsections have proper anchors for hyperlinks
-\titleformat{\subsection}{\phantomsection\normalfont\large\bfseries}{\thesubsection}{1em}{}
+\titleformat{\subsection}{\phantomsection\normalfont\large\bfseries}{\thesubsection}{0.8em}{}
 
 %%% Chapter title formatting
 %% No extra space above and below chapter headings, big number/letter behind chapter title
 %% inspired by https://tex.stackexchange.com/a/690632
 %% TODO: try to shift chapter anchors a little bit up, so reference links give a nice view
-\makeatletter
-\def\@chaphead#1#2{
-    {\setlength{\parindent}{0pt} \raggedright \normalfont
+\NewDocumentCommand{\chaphead}{m O{}}{
+    {\setlength{\parindent}{0pt} \raggedright
         % \vspace*{15pt}%
-        % \Huge\bfseries \thechapter\hspace{0.5em} #1
-        \chapterheadingletter{#2}% Chapter number/letter
-        \Huge\bfseries #1 % Chapter title
+        \Huge\bfseries%
+        \ifFANCY%
+            \chapterheadingletter{#2}% fancy Chapter number/letter
+        \else%
+            \IfBlankF{#2}{\thechapter\hspace{0.7em}}% just basic Chapter number
+        \fi%
+        #1% Chapter title
         \par\nobreak
         \vspace{20pt}
-    }}
-\def\@makechapterhead#1{\@chaphead{#1}{\thechapter}}      % Use Chapter number
-\def\@makeschapterhead#1{\@chaphead{#1}{\extract{#1}{1}}} % Extract first letter of the current chapter title
+    }
+}
+\makeatletter
+\def\@makechapterhead#1{\chaphead{#1}[\thechapter]} % For numbered Chapters use their number
+\def\@makeschapterhead#1{
+    \ifFANCY
+        \chaphead{#1}[\extract{#1}{1}] % extract first letter of the current chapter title
+    \else
+        \chaphead{#1} % just Chapter title
+    \fi
+}
 \makeatother
 
 %% Chapter number/letter formatting
 \NewDocumentCommand{\chapterheadingletter}{m}{%
     \makebox[0pt][l]{%              Make box of zero width, don't move other stuff horizontally
-        \raisebox{-3ex}[0pt][0pt]{% Align the number vertically, don't move other stuff vertically
-            \hspace{0.7em} \color{ChapterNumberColor}% Horizontal whitespace, text color
-            \usefont{T1}{qzc}{m}{it}\fontsize{20ex}{20ex}\selectfont% Font type and size (TeX Gyre Chorus)
+        \raisebox{-16pt}[0pt][0pt]{% Align the number vertically, don't move other stuff vertically
+            \hspace{6pt} \color{ChapterNumberColor}% Horizontal whitespace, text color
+            \usefont{T1}{qzc}{m}{it}\fontsize{95pt}{95pt}\selectfont% Font type and size (TeX Gyre Chorus)
             #1 % Chapter heading letter
         }%
     }%
@@ -49,5 +60,3 @@
     \tl_item:fn { #1 } { #2 }
 }
 \ExplSyntaxOff
-
-%% TODO: check for inital letters in the chapter ~/Documents/customfiles/phd-thesis-valentin/tex/preamble/settings/initials.tex
