fix(floatrow): proper paragraph spacing in floatrow captions
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -47,6 +47,7 @@
 %% Hacky stuff, oftentimes overriding commands of other packages
 \input{preamble/hacks/custom-reference-boxes}
 \input{preamble/hacks/fix-qed}
+\input{preamble/hacks/floatrow-parskip.tex}
 
 %% User macros
 \input{preamble/user/macros}
