docs(demo): describe briefly preamble file structure
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/general/hyperref.tex
+++ b/preamble/general/hyperref.tex
@@ -1,4 +1,5 @@
 %% Hyperlinks, PDF metadata
+\usepackage[allowmove]{url}
 \usepackage{hyperref}   % clickable links and metadata
 \usepackage{nameref}    % cross-referencing by name
 
