--- a/preamble/misc/tikz.tex
+++ b/preamble/misc/tikz.tex
@@ -1,4 +1,11 @@
 %%% TikZ, and other drawing packages
 
 \usepackage{tikz}
-\usetikzlibrary{fadings,arrows.meta,calc,cd,decorations.pathmorphing}
+\usetikzlibrary{
+    fadings,
+    arrows.meta,
+    calc,
+    cd,
+    decorations.pathmorphing,
+    trees,
+}
