feat(microtype): disable ligatures in typewriter font
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/general/typesetting.tex
+++ b/preamble/general/typesetting.tex
@@ -5,6 +5,7 @@
 \fi
 \usepackage{lmodern}        % Latin Modern fonts
 \usepackage{microtype}      % improve typography
+\DisableLigatures[-]{family=tt*} % disable ligatures in typewriter font
 \usepackage{parskip}        % no paragraph indentation
 \usepackage{csquotes}       % context-sensitive quotation facilities
 
